--- a/index.html
+++ b/index.html
@@ -1,91 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4D Model with API-Driven Shape Key</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #000;
-        }
-        canvas {
-            display: block;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3D Model Viewer</title>
+  <style>
+    body, html {
+      margin: 0;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #000;
+    }
+    #canvasContainer {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+  </style>
 </head>
 <body>
-    <script type="module">
-        import * as THREE from 'https://unpkg.com/three@0.150.0/build/three.module.js';
-        import { GLTFLoader } from 'https://unpkg.com/three@0.150.0/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from 'https://unpkg.com/three@0.150.0/examples/jsm/controls/OrbitControls.js';
+  <div id="canvasContainer"></div>
 
-        // Setup scene, camera, renderer
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.module.js';
+    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/loaders/GLTFLoader.js';
+    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/controls/OrbitControls.js';
 
-        // Add lighting
-        const light = new THREE.DirectionalLight(0xffffff, 1);
-        light.position.set(0, 1, 1).normalize();
-        scene.add(light);
+    let scene, camera, renderer, controls, mesh;
 
-        // Set camera initial position
-        camera.position.set(0, 1, 3);
+    // Setup scene, camera, renderer
+    function init() {
+      scene = new THREE.Scene();
 
-        // Add OrbitControls for zooming
-        const controls = new OrbitControls(camera, renderer.domElement);
-        controls.enableDamping = true;
-        controls.dampingFactor = 0.25;
-        controls.enableZoom = true;
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.z = 2; // Adjust zoom level to be close to the model
 
-        // Load GLTF model
-        const loader = new GLTFLoader();
-        loader.load('models/03_ShapeKey_TEST.glb', function(gltf) {
-            const model = gltf.scene;
-            scene.add(model);
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.getElementById('canvasContainer').appendChild(renderer.domElement);
 
-            const cylinder001 = model.getObjectByName('cylinder.001');
-            if (cylinder001 && cylinder001.morphTargetInfluences) {
-                // Fetch data from API and normalize the value
-                fetch('https://script.googleusercontent.com/macros/echo?user_content_key=H_r5uwp_XlijZ5TzbGcqHMilMwepE3pdSDLRLBSeLeYcARL7_ucFGrGbex0-gXZwduiWpfM1y7nlt_WHsld6cLC4aXPLFWg5m5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io')
-                    .then(response => response.json())
-                    .then(data => {
-                        const apiValue = data[0]["Assigned Value"];
-                        // Normalize the API value to the 0-1 range for the DiscSize shape key
-                        const normalizedValue = (apiValue - 0) / (5 - 0);
-                        // Set the shape key value (DiscSize)
-                        cylinder001.morphTargetInfluences[0] = normalizedValue;
-                    })
-                    .catch(error => console.error('Error fetching API data:', error));
+      // Controls for zooming in/out and rotating the model
+      controls = new OrbitControls(camera, renderer.domElement);
+      controls.enableZoom = true;
+      controls.enablePan = false;
+      controls.target.set(0, 0, 0); // Center the model
+      controls.update();
+
+      // Lighting
+      const light = new THREE.DirectionalLight(0xffffff, 1);
+      light.position.set(2, 2, 2);
+      scene.add(light);
+
+      const ambientLight = new THREE.AmbientLight(0x404040, 2); // Soft ambient light
+      scene.add(ambientLight);
+
+      loadModel();
+    }
+
+    // Load the GLB model and apply the Shape Key value from the API
+    function loadModel() {
+      const loader = new GLTFLoader();
+      loader.load('models/03_ShapeKey_TEST.glb', function(gltf) {
+        mesh = gltf.scene;
+        scene.add(mesh);
+
+        // Fetch data from the API and normalize the Assigned Value to the range 0-5
+        fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io')
+          .then(response => response.json())
+          .then(data => {
+            // Get the assigned value and normalize it
+            const assignedValue = 2.218503937007874;
+            const normalizedValue = assignedValue / 5; // Normalize to 0-1 range
+
+            // Access the shape key and apply the normalized value
+            const skinnedMesh = mesh.getObjectByName('YourMeshName'); // Replace with the actual mesh name
+            if (skinnedMesh.morphTargetInfluences) {
+              skinnedMesh.morphTargetInfluences[0] = normalizedValue; // Apply to Shape Key '00_SIZE'
             }
 
             animate();
-        }, undefined, function(error) {
-            console.error('Error loading the GLB model:', error);
-        });
+          });
+      });
+    }
 
-        // Handle resizing
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
+    // Animation loop
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
+    }
 
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-            controls.update();
-            renderer.render(scene, camera);
-        }
-    </script>
+    // Handle window resizing
+    window.addEventListener('resize', function() {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    init();
+  </script>
 </body>
 </html>
-
