--- a/index.html
+++ b/index.html
@@ -1,118 +1,135 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4D Model Viewer</title>
-  <style>
-    body, html {
-      margin: 0;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #000;
-    }
-    #canvasContainer {
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>13D Model Viewer</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            overflow: hidden;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <div id="canvasContainer"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js"></script>
+    
+    <script>
+        // Scene, Camera, Renderer setup
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(window.devicePixelRatio);  // Improve rendering quality
+        document.body.appendChild(renderer.domElement);
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.module.js';
-    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/loaders/GLTFLoader.js';
-    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/controls/OrbitControls.js';
+        // Move the camera closer for a more zoomed-in initial view
+        camera.position.set(0, 0, 0.3); 
 
-    let scene, camera, renderer, controls, mesh;
+        // Add OrbitControls for zoom and rotation
+        const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        controls.enableDamping = true; // Smooth control
+        controls.dampingFactor = 0.05;
+        controls.screenSpacePanning = false;
+        controls.enableZoom = true;
+        controls.zoomSpeed = 0.5; // Make zooming faster and more responsive
+        controls.maxDistance = 5;  // Restrict max distance
 
-    // Setup scene, camera, renderer
-    function init() {
-      scene = new THREE.Scene();
+        // Light setup (ambient + directional light)
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Soft white light
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 1); // Strong directional light
+        directionalLight.position.set(5, 5, 5);
+        scene.add(ambientLight);
+        scene.add(directionalLight);
 
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.z = 2; // Adjust zoom level to be close to the model
+        // Load the 3D model
+        const loader = new THREE.GLTFLoader();
+        let pupilMesh;
 
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.getElementById('canvasContainer').appendChild(renderer.domElement);
+        loader.load('models/01_ShapKeyed_EyeBall.glb', function (gltf) {
+            const model = gltf.scene;
 
-      // Controls for zooming in/out and rotating the model
-      controls = new OrbitControls(camera, renderer.domElement);
-      controls.enableZoom = true;
-      controls.enablePan = false;
-      controls.target.set(0, 0, 0); // Center the model
-      controls.update();
+            // Center the model geometry using its bounding box
+            const box = new THREE.Box3().setFromObject(model);
+            const center = box.getCenter(new THREE.Vector3());
+            model.position.sub(center); // Adjust position so the model is centered
 
-      // Lighting
-      const light = new THREE.DirectionalLight(0xffffff, 1);
-      light.position.set(2, 2, 2);
-      scene.add(light);
+            model.scale.set(1.0, 1.0, 1.0); // Keep model larger
+            scene.add(model);
 
-      const ambientLight = new THREE.AmbientLight(0x404040, 2); // Soft ambient light
-      scene.add(ambientLight);
+            // Center the camera controls on the model
+            controls.target.copy(center);
+            controls.update();
 
-      loadModel();
-    }
+            // Find the 'Pupil' mesh and access its morph target
+            model.traverse(function (child) {
+                if (child.isMesh && child.name === 'Pupil') {
+                    pupilMesh = child;
+                }
+            });
 
-    // Load the GLB model and apply the Shape Key value from the API
-    function loadModel() {
-      const loader = new GLTFLoader();
-      loader.load('models/03_ShapeKey_TEST.glb', function(gltf) {
-        mesh = gltf.scene;
-        scene.add(mesh);
+            animate();  // Start rendering after model is loaded
+            fetchAndUpdate(); // Start fetching API data for the first time
 
-        // Log mesh names to identify correct mesh
-        console.log('Loaded GLB model:', mesh);
-        mesh.traverse((child) => {
-          if (child.isMesh) {
-            console.log('Mesh found:', child.name); // Log all mesh names
-          }
+            // Real-time API updates every 5 seconds
+            setInterval(fetchAndUpdate, 5000);
+        }, undefined, function (error) {
+            console.error('Error loading 3D model:', error);
         });
 
-        // Fetch data from the API and normalize the Assigned Value to the range 0-5
-        fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io')
-          .then(response => response.json())
-          .then(data => {
-            const assignedValue = 2.218503937007874;
-            const normalizedValue = assignedValue / 5; // Normalize to 0-1 range
+        // Define the min and max range of "Assigned Value"
+        const minValue = 0;
+        const maxValue = 10;  // Adjust based on the expected range from the API
 
-            // Find the mesh that holds the shape key
-            const targetMesh = mesh.getObjectByName('YourMeshName'); // Replace with actual mesh name
-            if (targetMesh && targetMesh.morphTargetInfluences) {
-              console.log('Applying normalized value to shape key:', normalizedValue);
-              targetMesh.morphTargetInfluences[0] = normalizedValue; // Apply to Shape Key '00_SIZE'
-            } else {
-              console.error('Mesh with morph targets not found!');
-            }
+        // Function to fetch the dynamic value from the API and update the morph target
+        function fetchAndUpdate() {
+            fetch('https://script.googleusercontent.com/macros/echo?user_content_key=Fflmruejr3Wo1jyoVlmm2VC9-peixwr4Zsnif-T4yQ1j3KYNXylGhL-ponqbH7bgtcSKmFwa3JjgrBClAWvLRjEYhBt4KPwMm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnLOhP_Yv2g7cdzrEvHyGSNEVukO7LcfqB0E5Sla7ueR41jq5zjZBMj-uZS5JNTN58D-EWxpy17moBNLfIDa8OkjcGI7lhJ_ZLw&lib=MSykVP-T6JpMcNQKt2t8MtLlZCQc5u2io')
+                .then(response => response.json())
+                .then(data => {
+                    // Select the first item's "Assigned Value" (change if another is needed)
+                    const dynamicValue = data[0]['Assigned Value']; // Change [0] to any index needed
+                    
+                    // Normalize the dynamicValue to a range of 0 to 1
+                    const normalizedValue = (dynamicValue - minValue) / (maxValue - minValue);
 
-            animate();
-          });
-      }, undefined, function(error) {
-        console.error('Error loading the model:', error);
-      });
-    }
+                    // Ensure the value is clamped between 0 and 1
+                    const clampedValue = Math.min(Math.max(normalizedValue, 0), 1);
 
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      renderer.render(scene, camera);
-    }
+                    // Apply the clampedValue to the morph target if pupilMesh exists
+                    if (pupilMesh) {
+                        pupilMesh.morphTargetInfluences[0] = clampedValue;
+                    }
+                })
+                .catch(err => console.error('Error fetching API data:', err));
+        }
 
-    // Handle window resizing
-    window.addEventListener('resize', function() {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            controls.update(); // Update controls in the animation loop
+            renderer.render(scene, camera);
+        }
 
-    init();
-  </script>
+        // Resize handling
+        window.addEventListener('resize', function () {
+            const width = window.innerWidth;
+            const height = window.innerHeight;
+            renderer.setSize(width, height);
+            camera.aspect = width / height;
+            camera.updateProjectionMatrix();
+        });
+    </script>
 </body>
 </html>
