--- a/test.html
+++ b/test.html
@@ -24,11 +24,11 @@
 <body>
   <div id="canvasContainer"></div>
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.module.js';
-    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/loaders/GLTFLoader.js';
-    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.132.2/examples/jsm/controls/OrbitControls.js';
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
 
+  <script>
     let scene, camera, renderer, controls, mesh;
 
     // Setup scene, camera, renderer
@@ -43,7 +43,7 @@
       document.getElementById('canvasContainer').appendChild(renderer.domElement);
 
       // Controls for zooming in/out and rotating the model
-      controls = new OrbitControls(camera, renderer.domElement);
+      controls = new THREE.OrbitControls(camera, renderer.domElement);
       controls.enableZoom = true;
       controls.enablePan = false;
       controls.target.set(0, 0, 0); // Center the model
@@ -62,7 +62,7 @@
 
     // Load the GLB model and apply the Shape Key value from the API
     function loadModel() {
-      const loader = new GLTFLoader();
+      const loader = new THREE.GLTFLoader();
       loader.load('models/03_ShapeKey_TEST.glb', function(gltf) {
         mesh = gltf.scene;
         scene.add(mesh);
